--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     document.getElementById("send").onclick = () => {
       document.getElementById("output").textContent = "Enviando...";
 
-      fetch("URL",{
+      fetch("https://script.google.com/macros/s/AKfycbzWYVJC4k-X2Ag-lKnfDZbtYcZ439JzATAOND8OeKfenZ8AHknImYPZGaodnqQ8wpJX/exec",{
       method: "POST",
       body: JSON.stringify({
       name: "test",
