--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         /* Contenedor Principal (Hero) */
         .hero-section {
             /* Aquí cargamos tu imagen */
-            background-image: url('fondo.png'); 
+            background-image: url('fondo.jpg'); 
             
             /* Ajustes para que la imagen cubra todo y se centre */
             height: 100%; 
